# CppChain

./: CMakeLists.txt  README.md
backend/: block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp  server.cpp  server.h
backend/blockchain/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  MerkleTree.cpp  MerkleTree.h  Transaction.cpp  Transaction.h  main.cpp  visualizer.py
backend/websocket/: WebSocketServer.cpp  WebSocketServer.h
frontend/: index.html  package-lock.json  package.json
